testbot/web: Use the TestBot records to show its activity.
The main index page is nice to browse the Jobs but does not allow
getting a synthetic picture of what the TestBot is doing at a given
time. Even the VM table at the bottom falls short as it only shows the
current state and does not even show what Task a given VM is running.

Each row of the new Activity page shows what each VM was doing at that
time, with color coding, links to the relevant Tasks for running VMs,
and a count of the runnable and queued Tasks.
Going down the table shows past history, allowing one to see how the
TestBot got in the current state.
The VMs are also grouped by host which makes it easier to verify that
the scheduler is obeying its operational parameters like the limits on
simultaneous running Tasks, reverting VMs, etc.
While the activity page shows no sensitive information for now access to
it is restricted to users with a TestBot account.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>

--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -330,3 +330,34 @@ pre
 .testfail  { color: red; }
 .boterror  { color: #e55600; }
 .canceled  { color: black; }
+
+a.title { color:white; text-decoration: none; }
+
+th.Record { text-align: center; }
+td.Record { text-align: center; }
+.RecordHost { font-size: smaller; }
+.RecordJob { font-size: smaller; }
+.RecordDuration { }
+
+.Record-start { background-color: white; }
+.Record-off { color: #c0c0c0; }
+.Record-unknown { background-color: #c0c0c0; }
+.Record-offline { background-color: red; }
+
+/* Greens for preparing VMs */
+.Record-reverting { background-color: #70ff54; }
+.Record-sleeping { background-color: #a3ff7a; }
+.Record-idle { background-color: #ccff99; }
+
+/* Yellows for running VMs */
+.Record-running { background-color: #ffcc00; }
+.Record-dirty { background-color: #ffe633; }
+
+/* Blues for disabled VMs */
+.Record-maintenance { background-color: #adccef; }
+.Record-retired { background-color: #72a7e4; }
+.Record-deleted { background-color: #246bbc; }
+
+/* Special borders */
+.Record.Record-left { border-left: thin solid #601919; }
+.Record.Record-right { border-right: thin solid #601919; }
