--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -375,3 +375,5 @@ td.Record { text-align: center; }
 .Record.Record-error { border-left: thick solid #990000; border-right: thick solid #990000; }
 .Record.Record-timeout { border-left: thick solid blue; border-right: thick solid blue; }
 .Record.Record-miss { border-top: thick dashed #ff6600; }
+
+td.StatSeparator { color: #601919; font-weight: bold; }
