testbot/web: Make the title class a bit more generic.
Instead of hardcoding the text color it now inherits it from the normal
non-link text. This makes it usable on white backgrounds too.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -340,7 +340,7 @@ pre
 .boterror  { color: #e55600; }
 .canceled  { color: black; }
 
-a.title { color:white; text-decoration: none; }
+a.title { color:inherit; text-decoration: none; }
 
 th.Record { text-align: center; }
 td.Record { text-align: center; }
