--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -344,6 +344,7 @@ a.title { color:inherit; text-decoration: none; }
 
 th.Record { text-align: center; }
 td.Record { text-align: center; }
+.RecordEngine { font-style: italic; color: #601919; }
 .RecordHost { font-size: smaller; }
 .RecordJob { font-size: smaller; }
 .RecordDuration { }
