testbot/web: Show the TestBot's mispredictions on the Activity page.
The TestBot prepares VMs in advance so they are ready for the next Task.
Some times it mispredicts which VM will be needed next. Higlight such
cases on the Activity page so they can be identified and analyzed.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -371,3 +371,4 @@ td.Record { text-align: center; }
 /* Special borders */
 .Record.Record-left { border-left: thin solid #601919; }
 .Record.Record-right { border-right: thin solid #601919; }
+.Record.Record-miss { border-top: thick dashed #ff6600; }
