testbot: Show the VM configuration details when submitting a job.
The VMs are now shown in a table and their short description can be
expanded to show the full configuration. This can help select the right
set of VMs for the tests.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -317,6 +317,19 @@ h2
   padding-bottom: 0.1em;
 }
 
+details
+{
+  font-style: italic;
+  color: #505050;
+}
+
+summary
+{
+  font-style: normal;
+  color: black;
+}
+
+
 pre
 {
   margin: 0;
