--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -353,6 +353,11 @@ pre
 .boterror  { color: #e55600; }
 .canceled  { color: black; }
 
+.log-info  { background-color: #d9ffcc; }
+.log-skip  { color: blue; }
+.log-todo  { color: #d08000; }
+.log-error { color: red; }
+
 a.title { color:inherit; text-decoration: none; }
 
 th.Record { text-align: center; }
