testbot/web: Add a border around the link to hide the current log.
This helps make it clearer which log is being shown.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -310,6 +310,12 @@ h2
   margin-right: 2em;
 }
 
+.TaskMoreInfoSelected
+{
+    border: 1px solid #a50d0d;
+    padding: 2px;
+}
+
 .LogDllName
 {
   font-weight: bold;
