--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -377,6 +377,7 @@ pre
 .log-skip  { color: blue; }
 .log-todo  { color: #d08000; }
 .log-error { color: red; }
+.log-boterror { color: #cc0052; }
 
 a.title { color:inherit; text-decoration: none; }
 
