--- a/testbot/web/WineTestBot.css
+++ b/testbot/web/WineTestBot.css
@@ -378,6 +378,7 @@ pre
 .log-todo  { color: #d08000; }
 .log-error { color: red; }
 .log-boterror { color: #cc0052; }
+.log-diag { color: #e56300; }
 
 a.title { color:inherit; text-decoration: none; }
 
